citations complete on chap2

--- a/chap2.tex
+++ b/chap2.tex
@@ -440,7 +440,10 @@ monitored.\footnote{This point came up in a discussion with a
   scientist with experience with a UK-based firm working on public
   rapid transit, or PRT, systems.} While
 Mountain View, California may be mapped early, rural West Virginia or
-Northern Maine may not be mapped as soon or as frequently.
+Northern Maine may not be mapped as soon or as
+frequently.\footnote{And it is worth noting that 60 percent of road
+  fatalities occur on rural roads, and that the rate of fatalities per
+mile is twice that as for urban roads\cite[p. 11]{broviakCars}}
 Inequalities may be increased if routes frequented by upper-middle
 class professional commuters, most likely to own new autonomous cars,
 are mapped first, while roads around low-income communities are
@@ -1281,7 +1284,7 @@ society.\footnote{This self-image is not limited to those working on
   mobility systems. John Naughton writes---and my contact with
   programmers would lead me to agree---that many ``are fired with a zealous
   conviction that they are doing great stuff for the
-  world.''\cite{http://www.theguardian.com/commentisfree/2015/feb/22/google-tech-elite-living-in-a-parallel-universe-john-naughton}}
+  world.''\cite{naughtonTech}}
 They
 tend to buy into utopian visions of big cities freed of cars, with no
 parked cars on the streets and only driverless cabs. This desire to
@@ -1289,8 +1292,8 @@ change the way cities operate is admirable: our cities have a
 difficult hundred-year history of changing to cope with the
 automobile, and many of these changes have not been for the better
 when looked at through a broad lens. The prevalence of automobiles has
-literally re-shaped city centers,\cite{???-kemp} widened
-streets,\cite{???-kemp} and generally made many cities less safe for
+literally re-shaped city centers \cite[p. 7]{burdenCities}, widened
+streets \cite[p. 10]{burdenCities} \cite[p. 65]{fernandezBoulder}, and generally made many cities less safe for
 pedestrians and bicyclists. Many of the streets in the most pedestrian
 friendly zones of older cities would no longer be legal to build under
 current traffic codes, and the default lane widths for arteries have increased
@@ -1299,10 +1302,10 @@ United States's most pedestrian-unfriendly cities, major intersections
 in the downtown area are more than 9 lanes across, each of which is 12
 feet wide. These changes in 
 regulations and practices have contributed to more sterile urban
-centers with reduced potential for vibrant civic life. Urban planners have
+centers with reduced potential for vibrant civic life \cite[p. 60]{miaraBoston}. Urban planners have
 in recent years begun to take the automotive threat seriously, pushing
 for reduced lane width requirements and designing urban areas that
-limit vehicle traffic on purpose.\cite{???-kemp} If self-driving
+limit vehicle traffic on purpose \cite[p. 67]{fernandezBoulder}. If self-driving
 vehicles have a high probability of effecting a positive change on the
 cityscape, as some proponents claim, they could be an important
 addition to these developments.
@@ -1313,21 +1316,35 @@ other social reasons used to support automated vehicle development.
 With carefully controlled, automated driving, the fuel consumption of each
 individual car could be reduced, just as so-called ``hypermilers''
 today use altered---and very conservative---driving techniques in
-order to increase their fuel efficiency.\cite{???} As discussed in
+order to increase their fuel efficiency \cite{orourkeHypermile}. As discussed in
 chapter \ref{chap:1}, researchers envision using V2V communications to
 share road information between vehicles, reduce gaps between cars, and
 thereby increase throughput and efficiency of the road system. But
 these proposals involve numerous potential pitfalls. While coordinated
-fleets of vehicles could increase the throughput of roads by 2 to X
-times, significantly greater increases would be necessary to match the
+fleets of vehicles could increase the throughput of roads by 2 to 20
+times \cite[p. 229]{adamsBrewerRoadways},\footnote{Adams and Brewer
+  cite numbers of 10 solo drivers per square foot of right-of-way per
+  hour for conventional highways, and between 100 and 200 for their
+  modified approaches that use normal subcompact vehicles and special
+  bubble-like micro-cars, respectively.} significantly greater increases would be necessary to match the
 throughputs of buses or subway trains, which can be 100 times
-greater.\cite{???-kemp} Much depends on actual usage---subject to
+greater \cite[p. 222]{loweCars}.\footnote{Specifically, Lowe describes that
+  per-hour capacity for 
+  a rail line can be as high as 70,000, compared with 30,000 for buses
+and just 8,000 for private cars.} Much depends on actual usage---subject to
 homeostasis of inconvenience and the Jevons paradox. If a factor of 10
 increase in highway throughput were possible, but caused a factor of
 10 increase in overall miles driven, congestion would not be
 ameliorated, and significantly more environmental impact might result. Any
 large-scale impacts of automated vehicles are dependent on the
-architecture of the overall transportation system. And therefore it is
+architecture of the overall transportation system.\footnote{As Adams
+  and Brewer write, critiquing Intelligent Vehicle-Highways Systems as
+  an insufficient solution: ``since the halcyon days of its introduction, the
+  automobile has produced half the world's carbon dioxide and hollowed
+out cities in the United States, and it is now doing the same in
+cities all over the developing world as their inhabitants rush to
+embrace industrialization and its mistakes'' \cite[p.
+  227]{adamsBrewerRoadways}} And therefore it is
 the transportation system, not automated vehicles alone, that must be remodeled.
 
 Fleets of fully automated vehicles could reasonably be expected to increase
@@ -1358,7 +1375,7 @@ experiments, or even trial and error to get right. Old models and
 habits need to be broken---consider for example the rules (about road
 widths, for instance) enshrined in law and the AASHTO ``Green Book'', as well as their
 surrounding culture, rules which are often taken almost as natural
-law\cite{???-kemp}---and new ones built to replace them. 
+law\cite[p. 181, 183]{swopeTrenton}---and new ones built to replace them. 
 
 However, we should be aware that these visions, however contingent,
 are not universal. Looking more closely, my informant described to me, the visions
@@ -1373,17 +1390,18 @@ regardless of the source, they suggest designed solutions may tend to
 be predisposed to certain types of uses, and less amenable to others
 that fall too far outside this masculine vision. Other uses are still
 possible, of course---Uber is already being used by parents to ferry
-their kids to school, even though it was almost certainly not designed
+their kids to school \cite{hoderParents} \cite{shapiroVan}, even
+though it was almost certainly not designed 
 for that
-purpose\cite{???-http://healthland.time.com/2013/11/14/for-more-parents-its-uber-to-the-rescue/--http://www.nytimes.com/2013/09/26/fashion/moms-van-is-called-uber.html?_r=0}---but
-inherent gender bias in design is not a problem that should be ignored
+purpose---but inherent gender bias in design is not a problem that should be ignored
 when making large-scale changes to infrastructure, as it can deeply
 affect the ways and frequencies with which people choose to use new
-technologies. Indeed, a recent UK study suggests men may be more
+technologies. Indeed, a recent study by University of Michigan
+Transportation Research Institute suggests men may be more
 amenable to autonomous vehicle technologies, and it is worth
 considering the role that gender-biased technological visions may have
 in that
-effect\cite{???-http://www.nytimes.com/2013/09/26/fashion/moms-van-is-called-uber.html?_r=0}.
+effect \cite{miglioreWomen}.
 Thinking about the variety in types, uses, and users of road vehicles---from
 subcompacts to vans to pickup trucks; from solo commuting to carrying kids to
 hauling construction equipment or moving furniture; from the wealthy
