--- a/main.bib
+++ b/main.bib
@@ -1079,6 +1079,51 @@
    note = "On the front page at http://cast-safety.org/",
 }
 
+@ARTICLE{naughtonTech,
+   author = "John Naughton",
+   title = "{G}oogle and tech's elite are living in a parallel universe",
+   journal = "The Guardian",
+   month = "February 21",
+   year = 2015,
+   note = "http://www.theguardian.com/commentisfree/2015/feb/22/google-tech-elite-living-in-a-parallel-universe-john-naughton",
+}
+
+@ARTICLE{orourkeHypermile,
+   author = "Monica O'Rourke",
+   title = "{E}very {G}allon {C}ounts: {S}ave {G}as {W}ith {H}ypermiling",
+   journal = "Mother Earth News",
+   number = "240",
+   month = "June/July",
+   year = 2010,
+   pages = 16--17,
+}
+
+@ARTICLE{hoderParents,
+   author = "Randye Hoder",
+   title = "{F}or {M}ore {P}arents, {I}t's {U}ber to the {R}escue",
+   journal = "Time",
+   month = "November 14",
+   year = 2013,
+   note = "http://healthland.time.com/2013/11/14/for-more-parents-its-uber-to-the-rescue/",
+}
+
+@ARTICLE{shapiroVan,
+   author = "Bee Shapiro",
+   title = "{M}om's {V}an {I}s {C}alled {U}ber",
+   journal = "The New York Times",
+   month = "September 25",
+   year = 2013,
+   note = "http://www.nytimes.com/2013/09/26/fashion/moms-van-is-called-uber.html?_r=1",
+}
+
+@ARTICLE{miglioreWomen,
+   author = "Greg Migliore",
+   title = "{W}omen more skeptical about autonomous cars than men, research says",
+   journal = "AutoBlog",
+   month = "August 1",
+   year = 2014,
+   note = "http://www.autoblog.com/2014/08/01/women-skeptical-self-driving-cars-more-than-men/",
+}
 
 
 
@@ -1159,6 +1204,55 @@
    author = "Alex Marshall",
    title = "{T}he {F}uture of {T}ransportation",
    pages = "215--219",
+}
+
+@INCOLLECTION{burdenCities,
+   crossref = "kempCars",
+   author = "Dan Burden",
+   title = "{C}ities, {S}treets, and {C}ars",
+   pages = "7--10",
+}
+
+@INCOLLECTION{broviakCars,
+   crossref = "kempCars",
+   author = "Pamela Broviak",
+   title = "{C}ars, {P}eople, and {S}afety",
+   pages = "11--14",
+}
+
+@INCOLLECTION{miaraBoston,
+   crossref = "kempCars",
+   author = "Jim Miara",
+   title = "{B}oston {U}ses {P}ublic {T}ransit {L}ines to {S}timulate {I}nner-{C}ity {D}evelopment",
+   pages = "59--64",
+}
+
+@INCOLLECTION{fernandezBoulder,
+   crossref = "kempCars",
+   author = "John Fernandez",
+   title = "{B}oulder {R}edesigns {R}esidential {S}treets to {F}ocus on {P}eople {R}ather than {C}ars",
+   pages = "65--70",
+}
+
+@INCOLLECTION{swopeTrenton,
+   crossref = "kempCars",
+   author = "Christopher Swope",
+   title = "{T}renton {R}edesigns {I}ts {F}reeways to {S}low {D}own {T}raffic",
+   pages = "181--185,
+}
+
+@INCOLLECTION{loweCars,
+   crossref = "kempCars",
+   author = "Marcia D. Lowe",
+   title = "{C}ars, {T}heir {P}roblems, and the {F}uture",
+   pages = "221--226",
+}
+
+@INCOLLECTION{adamsbrewerRoadways,
+   crossref = "kempCars",
+   author = "Ronald Adams and Terry Brewer",
+   title = "{R}oadways of the {F}uture",
+   pages = "227--232",
 }
 
 @BOOK{kempCars,
